redesign and refactoring

--- a/src/LuckyDrawBot/appsettings.Development.json
+++ b/src/LuckyDrawBot/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Bot": {
+    "Id": "20128cb3-5809-4b4f-a32d-b9929e67238c"
   }
 }
