--- a/src/LuckyDrawBot/appsettings.json
+++ b/src/LuckyDrawBot/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Bot": {
+    "Id": "to be overwritten"
+  }
 }
