Use storage table to store competitions

--- a/src/LuckyDrawBot/appsettings.json
+++ b/src/LuckyDrawBot/appsettings.json
@@ -6,6 +6,10 @@
   },
   "AllowedHosts": "*",
   "Bot": {
-    "Id": "to be overwritten"
-  }
+    "Id": "[to be overrided]"
+  },
+  "DataTable": {
+    "ConnectionString": "[to be overrided]"
+  },
+  "TimerUrl": "[to be overrided]"
 }
