--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  codeCoverageExclude: '[*]Microsoft.*,[*]System.*,[xunit*]*'
+  codeCoverageExclude: '\"[*]Microsoft.*,[*]System.*,[xunit*]*\"'
 
 steps:
 - script: |
@@ -13,7 +13,7 @@ steps:
   displayName: dotnet test
   inputs:
     command: test
-    arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=$(codeCoverageExclude)'
+    arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude= $(codeCoverageExclude)'
     projects: 'test/**/*.csproj'
     nobuild: true
 
