--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  codeCoverageExclude: '"[*]Microsoft.*,[*]System.*,[xunit*]*"'
+  codeCoverageExclude: ""\"[*]Microsoft.*,[*]System.*,[xunit*]*\"""
 
 steps:
 - script: |
