--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,23 +3,14 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  codeCoverageExclude: "\"[*]Microsoft.*,[*]System.*,[xunit*]*\""
 
 steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
 
 - script: |
-    dotnet test test/LuckyDrawBot.Tests/LuckyDrawBot.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=\"[*]Microsoft.*,[*]System.*,[xunit*]*\"
-  displayName: dotnet test new
-
-- task: DotNetCoreCLI@2
+    dotnet test test/LuckyDrawBot.Tests/LuckyDrawBot.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=\"[*]LuckyDrawBot.Program,[*]Microsoft.*,[*]System.*,[*]LuckyDrawBot.Infrastructure.*,[*]LuckyDrawBot.Tests.Infrastructure.*,[xunit*]*\"
   displayName: dotnet test
-  inputs:
-    command: test
-    arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=$(codeCoverageExclude)'
-    projects: 'test/**/*.csproj'
-    nobuild: true
 
 - script: |
     dotnet tool install -g dotnet-reportgenerator-globaltool
