Use Azure Logic App as timer service

--- a/src/LuckyDrawBot/appsettings.json
+++ b/src/LuckyDrawBot/appsettings.json
@@ -5,11 +5,16 @@
     }
   },
   "AllowedHosts": "*",
+  "HttpClientFactory": {
+    "Timer": {
+      "BaseAddress": "[to be overrided]"
+    }
+  },
   "Bot": {
     "Id": "[to be overrided]"
   },
   "DataTable": {
     "ConnectionString": "[to be overrided]"
   },
-  "TimerUrl": "[to be overrided]"
+  "ServicePublicBaseUrl": "[to be overrided]"
 }
