Use azure key vault

--- a/src/LuckyDrawBot/appsettings.Development.json
+++ b/src/LuckyDrawBot/appsettings.Development.json
@@ -6,7 +6,18 @@
       "Microsoft": "Information"
     }
   },
+  "HttpClientFactory": {
+    "Timer": {
+      "BaseAddress": "[from key vault]"
+    }
+  },
   "Bot": {
-    "Id": "20128cb3-5809-4b4f-a32d-b9929e67238c"
-  }
+    "Id": "20128cb3-5809-4b4f-a32d-b9929e67238c",
+    "Password": "[from key vault]"
+  },
+  "KeyVaultName": "luckydraw-keyvault-dev",
+  "DataTable": {
+    "ConnectionString": "[from key vault]"
+  },
+  "ServicePublicBaseUrl": "https://458990a2.ngrok.io/"
 }
