--- a/src/LuckyDrawBot/appsettings.json
+++ b/src/LuckyDrawBot/appsettings.json
@@ -11,8 +11,10 @@
     }
   },
   "Bot": {
-    "Id": "[to be overrided]"
+    "Id": "[to be overrided]",
+    "Password": "[to be overrided]"
   },
+  "KeyVaultName": "[to be overrided]",
   "DataTable": {
     "ConnectionString": "[to be overrided]"
   },
