create local and dev environments

--- a/src/LuckyDrawBot/appsettings.json
+++ b/src/LuckyDrawBot/appsettings.json
@@ -18,5 +18,8 @@
   "DataTable": {
     "ConnectionString": "[to be overrided]"
   },
+  "ApplicationInsights": {
+    "InstrumentationKey": "[to be overrided]"
+  },
   "ServicePublicBaseUrl": "[to be overrided]"
 }
