--- a/src/LuckyDrawBot/appsettings.local.json
+++ b/src/LuckyDrawBot/appsettings.local.json
@@ -15,9 +15,12 @@
     "Id": "20128cb3-5809-4b4f-a32d-b9929e67238c",
     "Password": "[from key vault]"
   },
-  "KeyVaultName": "luckydraw-keyvault-dev",
+  "KeyVaultName": "luckydraw-keyvault-local",
   "DataTable": {
     "ConnectionString": "[from key vault]"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
   },
   "ServicePublicBaseUrl": "https://458990a2.ngrok.io/"
 }
